# ldc_client

./: .gitignore  CMakeLists.txt  call_dialog.cpp  call_dialog.h  call_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  p2p.cpp  p2p.h  p2p_connection.cpp  p2p_connection.h  screen_streamer.cpp  screen_streamer.h  vcpkg.json  websocket_client.cpp  websocket_client.h  websocketclient.cpp  websocketclient.h
audio/: audio.cpp  audio.h
boost_libdatachannel/: CMakeLists.txt  main.cpp  vcpkg.json
daupi_server/: CMakeLists.txt
daupi_server/src/: CMakeLists.txt  main.cpp  server.cpp  server.h
daupi_site/: manage.py
daupi_site/account/: forms.py  models.py  serializers.py  urls.py  views.py
daupi_site/account/static/css/: base.css
daupi_site/account/templates/: base.html
daupi_site/account/templates/account/: channel_detail.html  create_channel.html  create_subchannel.html  dashboard.html  friend_requests.html  friends_list.html  invite_to_channel.html  my_channels.html  search_users.html  send_friend_request.html
daupi_site/account/templates/registration/: registration.html
daupi_site/daupi/: asgi.py  settings.py  urls.py  wsgi.py
src/: CMakeLists.txt  main.cpp
src/audio/: Audio_parametrs.h  audio.cpp  audio.h
src/call_dialog/: call_dialog.cpp  call_dialog.h  call_dialog.ui
src/client/: client.cpp  client.h  p2p_connection.cpp  p2p_connection.h
src/enums/: es_p2p.h
src/login_ui/: login.cpp  login.h
src/screen_share/: screen_streamer.cpp  screen_streamer.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/user_api/: user_api.cpp  user_api.h
src/video_camera/: video_camera.cpp  video_camera.h
src/websocket_client/: websocket_client.cpp  websocket_client.h
